Simplify dataset import page
Keeping only upload links and adapting the copy accordingly.

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -365,8 +365,8 @@
 	"onboarding.dataset.import_failed": "Sample dataset import failed",
 	"onboarding.dataset.importing_description": "This can take a few seconds… Almost there! 🙃",
 	"onboarding.dataset.importing_title": "Importing dataset",
-	"onboarding.dataset.title": "Start using Nuclia with sample data",
-	"onboarding.dataset.upload-links": "You can also upload your own <a href=\"#files\">files</a>, <a href=\"#folder\">folders</a>, <a href=\"#link\">links</a> or <a href=\"#csv\">add resources from a CSV</a>. Be aware that processing, categorizing and indexing the content can take some time.",
+	"onboarding.dataset.title": "Start using Nuclia",
+	"onboarding.dataset.upload-links": "Please upload some <a href=\"#files\">files</a>, <a href=\"#folder\">folders</a>, <a href=\"#link\">links</a> or <a href=\"#csv\">add resources from a CSV</a> so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.get_started": "Get started",
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
