--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -323,8 +323,8 @@
 	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
 	"onboarding.dataset.importing_description": "Esto puede tardar unos segundos... ¡Ya casi llegamos! 🙃",
 	"onboarding.dataset.importing_title": "Importando conjunto de datos",
-	"onboarding.dataset.title": "Comience a usar Nuclia con datos de muestra",
-	"onboarding.dataset.upload-links": "También puede cargar sus propios <a href=\"#files\">archivos</a>, <a href=\"#folder\">carpetas</a>, <a href=\"#link\">enlaces</a> o <a href=\"#csv\">agregar recursos desde un CSV</a>. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
+	"onboarding.dataset.title": "Empieza a usar Nuclia",
+	"onboarding.dataset.upload-links": "Cargue algunos <a href=\"#files\">archivos</a>, <a href=\"#folder\">carpetas</a>, <a href=\"#link\">enlaces</a> o <a href=\"#csv\">agregue recursos desde un CSV</a> para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
