--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -323,8 +323,8 @@
 	"onboarding.dataset.import_failed": "La importació del conjunt de dades de mostra ha fallat",
 	"onboarding.dataset.importing_description": "Això pot trigar uns segons... Gairebé allà! 🙃",
 	"onboarding.dataset.importing_title": "Importació del conjunt de dades",
-	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia amb dades de mostra",
-	"onboarding.dataset.upload-links": "També podeu penjar els vostres propis <a href=\"#files\">fitxers</a>, <a href=\"#folder\">carpetes</a>, <a href=\"#link\">enllaços</a> o <a href=\"#csv\">afegir recursos des d'un CSV</a>. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
+	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
+	"onboarding.dataset.upload-links": "Pengeu alguns <a href=\"#files\">fitxers</a>, <a href=\"#folder\">carpetes</a>, <a href=\"#link\">enllaços</a> o <a href=\"#csv\">afegiu recursos des d'un CSV</a> perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
