--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -324,7 +324,7 @@
 	"onboarding.dataset.importing_description": "Això pot trigar uns segons... Gairebé allà! 🙃",
 	"onboarding.dataset.importing_title": "Importació del conjunt de dades",
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
-	"onboarding.dataset.upload-links": "Pengeu alguns <a href=\"#files\">fitxers</a>, <a href=\"#folder\">carpetes</a>, <a href=\"#link\">enllaços</a> o <a href=\"#csv\">afegiu recursos des d'un CSV</a> perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
+	"onboarding.dataset.upload-links": "Pengeu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
