--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -326,10 +326,32 @@
 	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
 	"onboarding.dataset.upload-links": "Pengeu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.get_started": "Començar",
+	"onboarding.industry.IT_software": "TI / Software",
+	"onboarding.industry.chemical_industry": "Indústria química",
+	"onboarding.industry.construction": "Construcció",
+	"onboarding.industry.education": "Educació",
+	"onboarding.industry.energy": "Energia",
+	"onboarding.industry.engineering": "Enginyeria",
+	"onboarding.industry.finance": "Finances / Borsa / Inversió...",
+	"onboarding.industry.food_service": "Servei de menjar",
+	"onboarding.industry.health": "Salut",
+	"onboarding.industry.insurance": "Assegurança",
+	"onboarding.industry.legal": "Legal",
+	"onboarding.industry.manufacturing": "Fabricació",
+	"onboarding.industry.marketing": "Màrqueting",
+	"onboarding.industry.other": "Un altre",
+	"onboarding.industry.pharma": "Farmàcia",
+	"onboarding.industry.public_administration": "Administració Pública",
+	"onboarding.industry.research": "Recerca",
+	"onboarding.industry.retail": "Venda al detall",
+	"onboarding.industry.robotics": "Robòtica",
+	"onboarding.industry.sales": "Vendes",
+	"onboarding.industry.startup": "Startup",
+	"onboarding.industry.telecommunications": "Telecomunicacions",
 	"onboarding.industry_label": "En quina indústria ets?",
 	"onboarding.industry_placeholder": "Trieu una indústria",
 	"onboarding.kb_creation": "Creació d'emmagatzematge...",
-	"onboarding.search_engine_label": "Estàs utilitzant actualment altres cercadors?",
+	"onboarding.search_engine_label": "Quin motor de cerca utilitzeu per a dades internes?",
 	"onboarding.search_engine_placeholder": "Estic una mica decebut amb...",
 	"onboarding.setting_up": "⏳ Estem configurant el teu compte",
 	"onboarding.setting_up_subtitle": "El vostre compte estarà llest en menys d'un minut!",
