--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -368,10 +368,32 @@
 	"onboarding.dataset.title": "Start using Nuclia",
 	"onboarding.dataset.upload-links": "Please upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.get_started": "Get started",
+	"onboarding.industry.IT_software": "IT / Software",
+	"onboarding.industry.chemical_industry": "Chemical industry",
+	"onboarding.industry.construction": "Construction",
+	"onboarding.industry.education": "Education",
+	"onboarding.industry.energy": "Energy",
+	"onboarding.industry.engineering": "Engineering",
+	"onboarding.industry.finance": "Finance / Stock market / Investment...",
+	"onboarding.industry.food_service": "Food service",
+	"onboarding.industry.health": "Health",
+	"onboarding.industry.insurance": "Insurance",
+	"onboarding.industry.legal": "Legal",
+	"onboarding.industry.manufacturing": "Manufacturing",
+	"onboarding.industry.marketing": "Marketing",
+	"onboarding.industry.other": "Other",
+	"onboarding.industry.pharma": "Pharma",
+	"onboarding.industry.public_administration": "Public administration",
+	"onboarding.industry.research": "Research",
+	"onboarding.industry.retail": "Retail",
+	"onboarding.industry.robotics": "Robotics",
+	"onboarding.industry.sales": "Sales",
+	"onboarding.industry.startup": "Startup",
+	"onboarding.industry.telecommunications": "Telecommunications",
 	"onboarding.industry_label": "What industry are you in? ",
 	"onboarding.industry_placeholder": "Choose an industry",
 	"onboarding.kb_creation": "Storage creation…",
-	"onboarding.search_engine_label": "Are you currently using other search engines?",
+	"onboarding.search_engine_label": "What search engine are you using for internal data?",
 	"onboarding.search_engine_placeholder": "I'm a little disappointed with…",
 	"onboarding.setting_up": "⏳ ​ We’re setting your account up",
 	"onboarding.setting_up_subtitle": "Your account will be ready in less than a minute! ",
