--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -326,10 +326,32 @@
 	"onboarding.dataset.title": "Empieza a usar Nuclia",
 	"onboarding.dataset.upload-links": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.get_started": "Empezar",
+	"onboarding.industry.IT_software": "TI / Software",
+	"onboarding.industry.chemical_industry": "Industria química",
+	"onboarding.industry.construction": "Construcción",
+	"onboarding.industry.education": "Educación",
+	"onboarding.industry.energy": "Energía",
+	"onboarding.industry.engineering": "Ingeniería",
+	"onboarding.industry.finance": "Finanzas / Bolsa / Inversiones...",
+	"onboarding.industry.food_service": "Servicio de comida",
+	"onboarding.industry.health": "Salud",
+	"onboarding.industry.insurance": "Seguro",
+	"onboarding.industry.legal": "Legal",
+	"onboarding.industry.manufacturing": "Fabricación",
+	"onboarding.industry.marketing": "Márketing",
+	"onboarding.industry.other": "Otro",
+	"onboarding.industry.pharma": "Farmacéutica",
+	"onboarding.industry.public_administration": "Administración Pública",
+	"onboarding.industry.research": "Investigación",
+	"onboarding.industry.retail": "Al por menor",
+	"onboarding.industry.robotics": "Robótica",
+	"onboarding.industry.sales": "Ventas",
+	"onboarding.industry.startup": "Startup",
+	"onboarding.industry.telecommunications": "Telecomunicaciones",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
 	"onboarding.kb_creation": "Creación de almacenamiento…",
-	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
+	"onboarding.search_engine_label": "¿Qué motor de búsqueda está utilizando para los datos internos?",
 	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
 	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
 	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
