Move company field in last screen + minor text updates

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -258,7 +258,6 @@
 	"login.boarding_title": "Embarcament a Nuclia",
 	"login.check_email": "Comprova el teu correu!",
 	"login.check_email_details": "Feu clic a l'enllaç que acabeu de rebre a <strong>{{ email }}</strong> per finalitzar el vostre compte. Si no hi ha res a la vista... Comproveu la vostra carpeta de correu brossa 🙃!",
-	"login.company": "Empresa",
 	"login.continue_with": "Inicieu sessió amb {{provider}}",
 	"login.create_one": "Crea'n un!",
 	"login.description": "Coneix el què la teva empresa sap",
@@ -312,6 +311,7 @@
 	"modal.upload.title": "Puja els teus fitxers",
 	"modal.upload_folder": "Afegeix una carpeta",
 	"onboarding.account_creation": "Creació del compte...",
+	"onboarding.company": "Per a quina empresa treballes?",
 	"onboarding.consent": "En utilitzar aquest producte, accepteu els <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Termes i condicions</a> i la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privadesa</a>.",
 	"onboarding.dataset.delete": "Suprimeix la mostra",
 	"onboarding.dataset.delete_failed": "No s'ha pogut suprimir el conjunt de dades de mostra",
@@ -323,8 +323,8 @@
 	"onboarding.dataset.import_failed": "La importació del conjunt de dades de mostra ha fallat",
 	"onboarding.dataset.importing_description": "Això pot trigar uns segons... Gairebé allà! 🙃",
 	"onboarding.dataset.importing_title": "Importació del conjunt de dades",
-	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia",
-	"onboarding.dataset.upload-links": "Pengeu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
+	"onboarding.dataset.title": "Comenceu a utilitzar Nuclia amb les vostres dades",
+	"onboarding.dataset.upload-links": "Carregueu algunes carpetes, enllaços o afegiu recursos des d'un CSV perquè pugueu utilitzar Nuclia. Tingueu en compte que processar, categoritzar i indexar el contingut pot trigar una mica.",
 	"onboarding.get_started": "Començar",
 	"onboarding.industry.IT_software": "TI / Software",
 	"onboarding.industry.chemical_industry": "Indústria química",
