--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -300,7 +300,6 @@
 	"login.boarding_title": "Boarding Nuclia",
 	"login.check_email": "Check your email!",
 	"login.check_email_details": "Click on the link you just received at <strong>{{ email }}</strong> to finalize your account. If nothing in sight… Check your spam folder 🙃!",
-	"login.company": "Company",
 	"login.continue_with": "Log in with {{provider}}",
 	"login.create_one": "Create",
 	"login.description": "Know what your company knows",
@@ -354,6 +353,7 @@
 	"modal.upload.title": "Upload your files",
 	"modal.upload_folder": "Add a folder",
 	"onboarding.account_creation": "Account creation…",
+	"onboarding.company": "What company are you working for?",
 	"onboarding.consent": "By using this product, you accept the <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Terms and Conditions</a> and <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Privacy Policy</a>.",
 	"onboarding.dataset.delete": "Delete sample dataset",
 	"onboarding.dataset.delete_failed": "Failed to delete sample dataset",
@@ -365,8 +365,8 @@
 	"onboarding.dataset.import_failed": "Sample dataset import failed",
 	"onboarding.dataset.importing_description": "This can take a few seconds… Almost there! 🙃",
 	"onboarding.dataset.importing_title": "Importing dataset",
-	"onboarding.dataset.title": "Start using Nuclia",
-	"onboarding.dataset.upload-links": "Please upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
+	"onboarding.dataset.title": "Start using Nuclia with your own data",
+	"onboarding.dataset.upload-links": "Upload some folders, links or add resources from a CSV so you can use Nuclia. Be aware that processing, categorizing and indexing the content can take some time.",
 	"onboarding.get_started": "Get started",
 	"onboarding.industry.IT_software": "IT / Software",
 	"onboarding.industry.chemical_industry": "Chemical industry",
