--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -258,7 +258,6 @@
 	"login.boarding_title": "Embarque Nuclia",
 	"login.check_email": "!Revisa tu correo!",
 	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
-	"login.company": "Empresa",
 	"login.continue_with": "Inicie sesión con {{provider}}",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
@@ -312,6 +311,7 @@
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
 	"onboarding.account_creation": "Creación de cuenta…",
+	"onboarding.company": "¿Para qué empresa estás trabajando?",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
 	"onboarding.dataset.delete": "Eliminar muestra",
 	"onboarding.dataset.delete_failed": "Error al eliminar el conjunto de datos de muestra",
@@ -323,7 +323,7 @@
 	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
 	"onboarding.dataset.importing_description": "Esto puede tardar unos segundos... ¡Ya casi llegamos! 🙃",
 	"onboarding.dataset.importing_title": "Importando conjunto de datos",
-	"onboarding.dataset.title": "Empieza a usar Nuclia",
+	"onboarding.dataset.title": "Comienza a usar Nuclia con tus propios datos",
 	"onboarding.dataset.upload-links": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.get_started": "Empezar",
 	"onboarding.industry.IT_software": "TI / Software",
