[sc-3070] Audio tile implementation (#479)
* Audio tile v1

  - mostly copying and pasting the video tile
  - Factorizing common style in _media-tile.scss
  - Add fallback support on thumbnail
  - Add missing translations

* Update colors: no more color-neutral-background

* Audio player v1

* Prepare factorization

* Fix imports

* Add volume button and slider

* Add waves animation to the audio player

* Add error management on audio player

* Fix side panel height

--- a/libs/search-widget/public/i18n/ca.json
+++ b/libs/search-widget/public/i18n/ca.json
@@ -19,6 +19,7 @@
 	"entities.time": "Temps",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Obres",
+	"error.audio-loading": "S'ha produït un error en carregar el fitxer d'àudio.",
 	"error.processing": "Aquest recurs encara no s'ha processat completament",
 	"error.search": "Ups! Alguna cosa ha anat malament!",
 	"error.search-beta": "Sort que t'hem avisat que encara estem en beta! 🙃",
@@ -48,5 +49,6 @@
 	"results.sentences": "Frases rellevants",
 	"results.summary": "Resum",
 	"suggest.intents": "Etiquetes",
-	"suggest.paragraphs": "Paràgraf suggerit"
+	"suggest.paragraphs": "Paràgraf suggerit",
+	"tile.find-transcript": "Busca una transcripció"
 }
