--- a/libs/search-widget/public/i18n/en.json
+++ b/libs/search-widget/public/i18n/en.json
@@ -20,6 +20,7 @@
 	"entities.time": "Time",
 	"entities.title": "Insights",
 	"entities.work_of_art": "Art",
+	"error.audio-loading": "An error occurred while loading the audio file.",
 	"error.processing": "This resource is not fully processed yet",
 	"error.search": "Oops! Something is wrong right now!",
 	"error.search-beta": "Luckily we told you it's a beta! 🙃",
@@ -49,5 +50,6 @@
 	"results.sentences": "Relevant sentences",
 	"results.summary": "Summary",
 	"suggest.intents": "Labels",
-	"suggest.paragraphs": "Suggested paragraphs"
+	"suggest.paragraphs": "Suggested paragraphs",
+	"tile.find-transcript": "Find a transcript"
 }
