--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -258,7 +258,6 @@
 	"login.boarding_title": "Embarque Nuclia",
 	"login.check_email": "!Revisa tu correo!",
 	"login.check_email_details": "Haga clic en el enlace que acaba de recibir en <strong>{{ email }}</strong> para finalizar su cuenta. Si no hay nada a la vista… ¡Revisa tu carpeta de spam 🙃!",
-	"login.company": "Empresa",
 	"login.continue_with": "Inicie sesión con {{provider}}",
 	"login.create_one": "Créala!",
 	"login.description": "Conoce lo que tu empresa sabe",
@@ -312,6 +311,7 @@
 	"modal.upload.title": "Sube tus ficheros",
 	"modal.upload_folder": "Añade una carpeta",
 	"onboarding.account_creation": "Creación de cuenta…",
+	"onboarding.company": "¿Para qué empresa estás trabajando?",
 	"onboarding.consent": "Al utilizar este producto, acepta los <a href=\"https://nuclia.com/terms-and-conditions/\" target=\"_blank\">Términos y condiciones</a> y la <a href=\"https://nuclia.com/privacy-policy/\" target=\"_blank\">Política de privacidad</a>.",
 	"onboarding.dataset.delete": "Eliminar muestra",
 	"onboarding.dataset.delete_failed": "Error al eliminar el conjunto de datos de muestra",
@@ -323,13 +323,35 @@
 	"onboarding.dataset.import_failed": "La importación del conjunto de datos de muestra falló",
 	"onboarding.dataset.importing_description": "Esto puede tardar unos segundos... ¡Ya casi llegamos! 🙃",
 	"onboarding.dataset.importing_title": "Importando conjunto de datos",
-	"onboarding.dataset.title": "Empieza a usar Nuclia",
+	"onboarding.dataset.title": "Comienza a usar Nuclia con tus propios datos",
 	"onboarding.dataset.upload-links": "Cargue algunas carpetas, enlaces o agregue recursos desde un CSV para que pueda usar Nuclia. Tenga en cuenta que procesar, categorizar e indexar el contenido puede llevar algún tiempo.",
 	"onboarding.get_started": "Empezar",
+	"onboarding.industry.IT_software": "TI / Software",
+	"onboarding.industry.chemical_industry": "Industria química",
+	"onboarding.industry.construction": "Construcción",
+	"onboarding.industry.education": "Educación",
+	"onboarding.industry.energy": "Energía",
+	"onboarding.industry.engineering": "Ingeniería",
+	"onboarding.industry.finance": "Finanzas / Bolsa / Inversiones...",
+	"onboarding.industry.food_service": "Servicio de comida",
+	"onboarding.industry.health": "Salud",
+	"onboarding.industry.insurance": "Seguro",
+	"onboarding.industry.legal": "Legal",
+	"onboarding.industry.manufacturing": "Fabricación",
+	"onboarding.industry.marketing": "Márketing",
+	"onboarding.industry.other": "Otro",
+	"onboarding.industry.pharma": "Farmacéutica",
+	"onboarding.industry.public_administration": "Administración Pública",
+	"onboarding.industry.research": "Investigación",
+	"onboarding.industry.retail": "Al por menor",
+	"onboarding.industry.robotics": "Robótica",
+	"onboarding.industry.sales": "Ventas",
+	"onboarding.industry.startup": "Startup",
+	"onboarding.industry.telecommunications": "Telecomunicaciones",
 	"onboarding.industry_label": "En que industria estás?",
 	"onboarding.industry_placeholder": "Elige una industria",
 	"onboarding.kb_creation": "Creación de almacenamiento…",
-	"onboarding.search_engine_label": "¿Utiliza actualmente otros motores de búsqueda?",
+	"onboarding.search_engine_label": "¿Qué motor de búsqueda está utilizando para los datos internos?",
 	"onboarding.search_engine_placeholder": "Estoy un poco decepcionado con…",
 	"onboarding.setting_up": "⏳ Estamos configurando tu cuenta",
 	"onboarding.setting_up_subtitle": "¡Tu cuenta estará lista en menos de un minuto!",
