[sc-3342] Settings layout improvements
  - No more left panel
  - Remove Knowledge box from the title
  - Clean up style
  - No more FlexLayoutModule in knowledge box pages
  - Remove unused Knowledge box manage component

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -517,7 +517,7 @@
 	"stash.new_service_access_token": "Crear un nou token",
 	"stash.preferences.receive_help": "Rebre ajuda",
 	"stash.preferences.receiving_emails": "Preferències del correu electrònic",
-	"stash.profile": "Perfil de la caixa",
+	"stash.profile": "Configuració",
 	"stash.publish.confirm": "Publicar la caixa de coneixement significa que es farà pública i serà accessible per qualsevol persona del món. També podrà ser indexada pels cercadors públics tipus Google. ",
 	"stash.publish.publish": "Fer pública la Caixa de Coneixement",
 	"stash.publish.title": "Publicar la caixa de coneixement",
