--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -577,7 +577,7 @@
 	"stash.no_knowledge_boxes": "There are no knowledge boxes in this account",
 	"stash.preferences.receive_help": "Received help",
 	"stash.preferences.receiving_emails": "Email preferences",
-	"stash.profile": "Box profile",
+	"stash.profile": "Settings",
 	"stash.publish.confirm": "Publishing a knowledge box means it will be accessible to anyone in the world.  It  might be indexed by public search engines such as Google.",
 	"stash.publish.error": "Error when publishing the Knowledge Box",
 	"stash.publish.publish": "Publish Knowledge Box",
