--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -517,7 +517,7 @@
 	"stash.new_service_access_token": "Crear un nuevo token",
 	"stash.preferences.receive_help": "Recibir ayuda",
 	"stash.preferences.receiving_emails": "Preferencias del correo electrónico",
-	"stash.profile": "Perfil de la caja",
+	"stash.profile": "Ajustes",
 	"stash.publish.confirm": "Publicar una caja de conocimiento significa que será accesible para cualquier persona en el mundo. También significa que podría ser indexada por motores de búsqueda públicos como Google.",
 	"stash.publish.publish": "Publicar la Caja de Conocimiento",
 	"stash.publish.title": "Publicar la caja de conocimiento",
