Display error message about Gmail if we get 412

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -266,6 +266,7 @@
 	"login.email_sent": "T’hem enviat un mail! :)",
 	"login.error.auth_error": "Error d'autentificació.",
 	"login.error.get_consent_error": "S'ha produït un error a l'obtenir la informació de consentiment",
+	"login.error.google_workspace": "El registre amb Google està restringit als dominis de l'espai de treball, ho sento.",
 	"login.error.login_error": "S'ha produït un error durant l'autentificació",
 	"login.error.oops": "Vaja! Alguna cosa ha fallat!",
 	"login.error.submit_consent_error": "S'ha produït un error al donar els permisos",
@@ -273,6 +274,7 @@
 	"login.error.unknown_login_challenge": "login_challenge no és vàlid",
 	"login.full_name": "Nom complert",
 	"login.gogetflaps": "Coneix-ne més i registra't!",
+	"login.google-workspace": "Google Workspace",
 	"login.have_account": "No tens un compte?",
 	"login.have_account_already": "Ja tens un compte?",
 	"login.join_expedition": "Uneix-te a l’expedició en menys d’un minut",
