--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -308,6 +308,7 @@
 	"login.email_sent": "We’ve sent you an email!",
 	"login.error.auth_error": "Authentication error.",
 	"login.error.get_consent_error": "An error occurred while retrieving consent information",
+	"login.error.google_workspace": "Sign up with Google is restricted to workspace domains, sorry.",
 	"login.error.login_error": "An error occurred while logging in",
 	"login.error.oops": "Oops! Something went wrong!",
 	"login.error.submit_consent_error": "An error occurred while giving permission",
@@ -315,6 +316,7 @@
 	"login.error.unknown_login_challenge": "Invalid login_challenge",
 	"login.full_name": "Full name",
 	"login.gogetflaps": "Learn more & sign up!",
+	"login.google-workspace": "Google Workspace",
 	"login.have_account": "Don’t have an account?",
 	"login.have_account_already": "Already have an account?",
 	"login.join_expedition": "Build your AI-powered search in minutes",
