--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -266,6 +266,7 @@
 	"login.email_sent": "Te hemos enviado un mail! :)",
 	"login.error.auth_error": "Error de autenticación.",
 	"login.error.get_consent_error": "Se ha producido un error al obtener la información de consentimiento",
+	"login.error.google_workspace": "Registrarse con Google está restringido a dominios de espacios de trabajo, lo siento.",
 	"login.error.login_error": "Se ha producido un error durante la autenticación",
 	"login.error.oops": "Ups! Algo ha ido mal!",
 	"login.error.submit_consent_error": "Se ha producido un error al dar los permisos",
@@ -273,6 +274,7 @@
 	"login.error.unknown_login_challenge": "login_challenge no es válido",
 	"login.full_name": "Nombre completo",
 	"login.gogetflaps": "Conoce más y registrate!",
+	"login.google-workspace": "Google Workspace",
 	"login.have_account": "¿No tienes una cuenta?",
 	"login.have_account_already": "¿Ya tienes una cuenta?",
 	"login.join_expedition": "Únete a la expedición en menos de un minuto",
