New edit flow layout

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -442,6 +442,7 @@
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
+	"resource.resources": "Recursos",
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
 	"resource.selected_count": "{{num}} arxius seleccionats",
