--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -442,6 +442,7 @@
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} por página",
+	"resource.resources": "Recursos",
 	"resource.search.in-resource": "en recurso",
 	"resource.search.in-title": "en el titulo",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
