New edit flow for profile and classification
  - share the resource between the pages via a store (in EditResource service)
  - new resource-classification page
  - new optimistic approach when saving resource

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -491,6 +491,7 @@
 	"resource.profile": "Profile",
 	"resource.resource_page_number": "{{num}} per page",
 	"resource.resources": "Resources",
+	"resource.save-successful": "Resource saved",
 	"resource.search.in-resource": "in resource",
 	"resource.search.in-title": "in title",
 	"resource.selected_count": "{{num}} files selected",
@@ -511,6 +512,7 @@
 	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.title": "Resource title",
+	"resource.toast.save-successful": "",
 	"resource.visible_columns_dropdown": "Columns displayed",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
