--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -443,6 +443,7 @@
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
 	"resource.resources": "Recursos",
+	"resource.save-successful": "S'ha guardat el recurs",
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
 	"resource.selected_count": "{{num}} arxius seleccionats",
