--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -463,6 +463,8 @@
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
+	"resource.tooltip.classification": "Clasificación",
+	"resource.tooltip.edition": "Edición",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
