--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -268,6 +268,7 @@
 	"login.error.get_consent_error": "Se ha producido un error al obtener la información de consentimiento",
 	"login.error.google_workspace": "Registrarse con Google está restringido a dominios de espacios de trabajo, lo siento.",
 	"login.error.login_error": "Se ha producido un error durante la autenticación",
+	"login.error.no_personal_email": "El acceso a Nuclia está restringido a los correos electrónicos de la empresa",
 	"login.error.oops": "Ups! Algo ha ido mal!",
 	"login.error.submit_consent_error": "Se ha producido un error al dar los permisos",
 	"login.error.unknown_consent_challenge": "consent_challenge no es válido",
