[sc-3538] New edit flow (#505)
* Remove deprecated page-layouts

* New edit flow layout

* New edit flow for profile and classification

  - share the resource between the pages via a store (in EditResource service)
  - new resource-classification page
  - new optimistic approach when saving resource

* Add tooltips

--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -491,6 +491,8 @@
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
 	"resource.resource_page_number": "{{num}} per page",
+	"resource.resources": "Resources",
+	"resource.save-successful": "Resource saved",
 	"resource.search.in-resource": "in resource",
 	"resource.search.in-title": "in title",
 	"resource.selected_count": "{{num}} files selected",
@@ -511,6 +513,9 @@
 	"resource.thumbnail.drop": "Drop image or click here",
 	"resource.thumbnail.help": "Upload an image or pick from suggestions",
 	"resource.title": "Resource title",
+	"resource.toast.save-successful": "",
+	"resource.tooltip.classification": "Classification",
+	"resource.tooltip.edition": "Edition",
 	"resource.visible_columns_dropdown": "Columns displayed",
 	"search.more_results": "show more results",
 	"search.sort_by": "Sort by",
