--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -443,6 +443,8 @@
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} por página",
+	"resource.resources": "Recursos",
+	"resource.save-successful": "Recurso guardado",
 	"resource.search.in-resource": "en recurso",
 	"resource.search.in-title": "en el titulo",
 	"resource.selected_count": "{{num}} ficheros seleccionados",
@@ -462,6 +464,8 @@
 	"resource.thumbnail.drop": "Suelte la imagen o haga clic aquí",
 	"resource.thumbnail.help": "Sube una imagen o elige de las sugerencias",
 	"resource.title": "Título del recurso",
+	"resource.tooltip.classification": "Clasificación",
+	"resource.tooltip.edition": "Edición",
 	"resource.visible_columns_dropdown": "Columnas mostradas",
 	"search.more_results": "mostrar más resultados",
 	"search.sort_by": "Ordenar por",
