--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -443,6 +443,8 @@
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
 	"resource.resource_page_number": "{{num}} per pàgina",
+	"resource.resources": "Recursos",
+	"resource.save-successful": "S'ha guardat el recurs",
 	"resource.search.in-resource": "en recurs",
 	"resource.search.in-title": "al títol",
 	"resource.selected_count": "{{num}} arxius seleccionats",
@@ -462,6 +464,8 @@
 	"resource.thumbnail.drop": "Deixeu la imatge o feu clic aquí",
 	"resource.thumbnail.help": "Penja una imatge o tria entre els suggeriments",
 	"resource.title": "Títol del recurs",
+	"resource.tooltip.classification": "Classificació",
+	"resource.tooltip.edition": "Edició",
 	"resource.visible_columns_dropdown": "Es mostren les columnes",
 	"search.more_results": "mostrar més resultats",
 	"search.sort_by": "Ordenar per",
