Navigation between fields
  - Display fields on the left side of profile view
  - Display profile by default when changing view
  - Improve nav block style

--- a/libs/common/src/assets/i18n/ca.json
+++ b/libs/common/src/assets/i18n/ca.json
@@ -439,6 +439,9 @@
 	"resource.entities.title": "Insights del recurs",
 	"resource.entities.work_of_art": "Obres",
 	"resource.failed_resources_popover": "El processament dels fitxers ha fallat",
+	"resource.field-file": "Camp de fitxer",
+	"resource.field-link": "Camp d'enllaç",
+	"resource.field-text": "Camp de text",
 	"resource.pending_resources_popover": "Expedients pendents de processar",
 	"resource.processed_resources": "Recursos processats",
 	"resource.profile": "Perfil",
