--- a/libs/common/src/assets/i18n/en.json
+++ b/libs/common/src/assets/i18n/en.json
@@ -485,8 +485,9 @@
 	"resource.entities.title": "Resource insights",
 	"resource.entities.work_of_art": "Art",
 	"resource.failed_resources_popover": "Processing failed files",
-	"resource.file": "File",
-	"resource.link": "Link",
+	"resource.field-file": "File field",
+	"resource.field-link": "Link field",
+	"resource.field-text": "Text field",
 	"resource.pending_resources_popover": "Files pending to be processed",
 	"resource.processed_resources": "Processed resources",
 	"resource.profile": "Profile",
