--- a/libs/common/src/assets/i18n/es.json
+++ b/libs/common/src/assets/i18n/es.json
@@ -439,6 +439,9 @@
 	"resource.entities.title": "Información clave del recurso",
 	"resource.entities.work_of_art": "Obras",
 	"resource.failed_resources_popover": "Procesamiento de archivos fallidos",
+	"resource.field-file": "Campo de archivo",
+	"resource.field-link": "Campo de enlace",
+	"resource.field-text": "Campo de texto",
 	"resource.pending_resources_popover": "Expedientes pendientes de tramitar",
 	"resource.processed_resources": "Recursos procesados",
 	"resource.profile": "Perfil",
